<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/signature_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:maxHeight="150dp"
                android:scaleType="centerInside"/>

        <TextView
                android:id="@+id/signature_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signed_by"/>

        <EditText
                android:id="@+id/signature_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true"/>

        <Button
                android:id="@+id/sign_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                style="@style/FormButtonStyle"
                android:text="@string/add_signature"/>

    </LinearLayout>

</merge>
