<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header"/>

    <RelativeLayout
            android:id="@+id/response_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/geo_shape_checkmark"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/checkmark"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:id="@+id/geo_shape_captured_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/geo_shape_checkmark"
                android:layout_toEndOf="@id/geo_shape_checkmark"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textColor="#8dc63f"
                android:text="@string/geoshape_response"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
            android:id="@+id/capture_shape_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FormButtonStyle"
            android:text="@string/capture_shape"/>

</merge>
