<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/caddisfly_results_recycler_view"
            android:scrollbars="none"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
        android:id="@+id/caddisfly_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caddisfly_test"
        style="@style/FormButtonStyle" />

</merge>
